# xieite-cmake

./: .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json
cmake/: clang-format.cmake  cmake-utils.cmake  compiler-warnings.cmake  submodule-init.cmake
src/: main.cpp
